k8s/traefik-ingress-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-load-balancer
  namespace: kube-system
  labels:
    k8s.scw.cloud/ingress: traefik2
spec:
  type: LoadBalancer
  ports:
    - port: 80
      name: http
      targetPort: 8000
    - port: 443
      name: https
      targetPort: 8443
  selector:
    app.kubernetes.io/name: traefik
