k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  # annotations:
  #   traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  # tls:
  #   - hosts:
  #       - imagehiding.com
  #     secretName: web-cert
  #   - hosts:
  #       - api.imagehiding.com
  #     secretName: api-cert
  ingressClassName: traefik
  rules:
    - host: imagehiding.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-svc
                port:
                  number: 80
    - host: api.imagehiding.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-svc
                port:
                  number: 80
